--- a/ProgramacaoWEB/TarefaCardápio/index.html
+++ b/ProgramacaoWEB/TarefaCardápio/index.html
@@ -52,16 +52,36 @@
                         <!-- 2º coluna -->
                         <img src="img/Brabo.png" class="descricao__imagem">
                     </div>
-
-                    <!-- 2º linha -->
-                    <div class="card__botoes">
-                        <!-- 1º coluna -->
-                        <ul class="botoes">
-                            <li class="botoes__item"><img src="img/logo-mc.png" alt="LogoMc"></li>
-                        </ul>
-                        <!-- 2º coluna -->
-                        <a href="#" class="botoes__ancora">Saiba mais</a>
+                </div>
+            </div>
+    </section>
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">Acompanhamentos</h2>
+            <div class="carrossel__container">
+                <div class="swiper">
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="img/cheedar-e-bacon.png" alt="CheddarBacon" class="carrossel__imagem"><p class="texto__imagem">Batata c/ Cheedar e Bacon - R$ 14,90</p></div>
+                        <div class="swiper-slide"><img src="img/batata.png" alt="Batata" class="carrossel__imagem"><p class="texto__imagem">Batata Frita - R$ 9,90</p></div>
+                        <div class="swiper-slide"><img src="img/nuggets.png" alt="Nuggets" class="carrossel__imagem"><p class="texto__imagem">Nuggets - R$ 9,90</p></div>
                     </div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                </div>
+            </div>
+    </section>
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">Bebidas</h2>
+            <div class="carrossel__container">
+                <div class="swiper">
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="img/coca.png" alt="Coca" class="carrossel__imagem"><p class="texto__imagem">Coca-cola - R$ 5,90</p></div>
+                        <div class="swiper-slide"><img src="img/suco.png" alt="Suco" class="carrossel__imagem"><p class="texto__imagem">Suco Del Valle - R$ 4,90</p></div>
+                        <div class="swiper-slide"><img src="img/agua.png" alt="Agua" class="carrossel__imagem"><p class="texto__imagem">Água Mineral s/ Gás - R$ 2,90</p></div>
+                    </div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
             </div>
     </section>
