--- a/ProgramacaoWEB/TarefaSiteCursos/index.html
+++ b/ProgramacaoWEB/TarefaSiteCursos/index.html
@@ -58,7 +58,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="net.html">
 										<h2>.NET</h2>
 										<div class="content">
 											<p>Inscreva-se agora e desbloqueie o potencial ilimitado da linguagem .NET. Destaque-se como desenvolvedor com uma das tecnologias mais demandadas e promissoras do mercado!</p>
@@ -69,7 +69,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="python.html">
 										<h2>Python</h2>
 										<div class="content">
 											<p>Inscreva-se agora e mergulhe no mundo da programação com Python. Aprenda a linguagem mais versátil e popular, e abra portas para oportunidades infinitas no mundo da tecnologia!</p>
@@ -80,7 +80,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="java.html">
 										<h2>Java</h2>
 										<div class="content">
 											<p>Junte-se a nós e domine a linguagem Java! Seja parte da comunidade de desenvolvedores Java e impulsione sua carreira com uma das linguagens mais robustas e versáteis do mundo da programação.</p>
@@ -91,7 +91,7 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="sql.html">
 										<h2>SQL</h2>
 										<div class="content">
 											<p>Não perca tempo! Inscreva-se agora e desvende os segredos do SQL. Adquira habilidades essenciais em bancos de dados e torne-se um especialista em manipulação e gerenciamento de dados com um curso especializado em SQL.</p>
@@ -102,7 +102,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="javascript.html">
 										<h2>JavaScript</h2>
 										<div class="content">
 											<p>Inscreva-se e dê vida à web com JavaScript!</p>
@@ -113,7 +113,7 @@
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="flutter.html">
 										<h2>Flutter</h2>
 										<div class="content">
 											<p>Desenvolva apps incríveis com Flutter. Inscreva-se agora!</p>
