--- a/ProgramacaoWEB/TarefaSiteCursos/javascript.html
+++ b/ProgramacaoWEB/TarefaSiteCursos/javascript.html
@@ -48,19 +48,30 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Notícias</h1>
-							<span class="image main"><img src="images/expansao.jpg" alt="" /></span>
-							<p><b>Expansão do Campus Tecnológico</b></p>
-							<p>Nosso campus continua a crescer e se aprimorar. Estamos investindo em infraestrutura de última geração para fornecer aos nossos alunos as melhores instalações possíveis. Com laboratórios de pesquisa avançados e salas de aula inteligentes, nosso compromisso com a tecnologia de ponta é evidente em cada canto do campus.</p>
+							<h1>Curso JavaScript para Web</h1>
+							<span class="image main"><img src="images/JavaScript-logo.png" alt="" /></span>
+							<p>O Curso de JavaScript para Web é uma jornada empolgante para quem deseja se tornar um mestre na linguagem de programação essencial para o desenvolvimento web. Este curso abrange desde os fundamentos do JavaScript, como variáveis, loops e condicionais, até tópicos avançados, como manipulação do DOM, AJAX e frameworks populares. Você aprenderá a criar interatividade dinâmica em sites e aplicativos, tornando-os mais envolventes e responsivos. Com a demanda crescente por desenvolvedores web qualificados, este curso é o trampolim perfeito para uma carreira emocionante na programação web.</p>
 						</div>
 					</div>
-					<div id="main">
-						<div class="inner">
-							<h1>Sobre</h1>
-							<span class="image main"><img src="images/vr.jpg" alt="" /></span>
-							<p><b>Novo Programa de Realidade Virtual e Aumentada</b></p>
-							<p>Estamos empolgados em anunciar o lançamento de nosso novo programa de Realidade Virtual e Aumentada (RV/RA). Agora, os alunos podem mergulhar em experiências educacionais imersivas que tornam o aprendizado mais envolvente e prático. Este é apenas o começo de nossa jornada na exploração dessas tecnologias inovadoras.</p>
-						</div>
+					<div>
+						<h2>Inscreva-se</h2>
+						<form method="post" action="https://64ee8a14219b3e2873c34ae9.mockapi.io/api/v1/aluno">
+							<div class="fields">
+								<div class="field half">
+									<input type="text" name="name" id="name" placeholder="Nome" />
+								</div>
+								<div class="field half">
+									<input type="email" name="email" id="email" placeholder="E-mail" />
+								</div>
+								<div class="field">
+									<p><b>CURSO DESTINADO</b></p>
+									<input type="text" name="curso" id="curso" value="JavaScript" readonly/>
+								</div>
+							</div>
+							<ul class="actions">
+								<li><button type="submit">Enviar</button></li>
+							</ul>
+						</form>
 					</div>
 
 				<!-- Footer -->
