--- a/ProgramacaoWEB/TarefaSiteCursos/sobre.html
+++ b/ProgramacaoWEB/TarefaSiteCursos/sobre.html
@@ -48,18 +48,10 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Notícias</h1>
-							<span class="image main"><img src="images/expansao.jpg" alt="" /></span>
-							<p><b>Expansão do Campus Tecnológico</b></p>
-							<p>Nosso campus continua a crescer e se aprimorar. Estamos investindo em infraestrutura de última geração para fornecer aos nossos alunos as melhores instalações possíveis. Com laboratórios de pesquisa avançados e salas de aula inteligentes, nosso compromisso com a tecnologia de ponta é evidente em cada canto do campus.</p>
-						</div>
-					</div>
-					<div id="main">
-						<div class="inner">
 							<h1>Sobre</h1>
-							<span class="image main"><img src="images/vr.jpg" alt="" /></span>
-							<p><b>Novo Programa de Realidade Virtual e Aumentada</b></p>
-							<p>Estamos empolgados em anunciar o lançamento de nosso novo programa de Realidade Virtual e Aumentada (RV/RA). Agora, os alunos podem mergulhar em experiências educacionais imersivas que tornam o aprendizado mais envolvente e prático. Este é apenas o começo de nossa jornada na exploração dessas tecnologias inovadoras.</p>
+							<span class="image main"><img src="images/universidade.jpg" alt="" /></span>
+							<p><b>Transformando a Educação com Tecnologia de Ponta</b></p>
+							<p>A Universidade Phoenix+ é a vanguarda da educação. Oferecemos salas de aula inteligentes, currículos personalizados e acesso à realidade virtual e aumentada. Nossos centros de pesquisa e compromisso com a sustentabilidade moldam o futuro. Todos têm acesso à tecnologia com programas de bolsas. Junte-se à revolução na Universidade Phoenix+. Seu futuro começa aqui.</p>
 						</div>
 					</div>
 
