--- a/ProgramacaoWEB/TarefaSiteCursos/sql.html
+++ b/ProgramacaoWEB/TarefaSiteCursos/sql.html
@@ -48,19 +48,30 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Notícias</h1>
-							<span class="image main"><img src="images/expansao.jpg" alt="" /></span>
-							<p><b>Expansão do Campus Tecnológico</b></p>
-							<p>Nosso campus continua a crescer e se aprimorar. Estamos investindo em infraestrutura de última geração para fornecer aos nossos alunos as melhores instalações possíveis. Com laboratórios de pesquisa avançados e salas de aula inteligentes, nosso compromisso com a tecnologia de ponta é evidente em cada canto do campus.</p>
+							<h1>Curso SQL para banco de dados</h1>
+							<span class="image main"><img src="images/sql-logo.jpg" alt="" /></span>
+							<p>O Curso de SQL - Dominando a Linguagem de Bancos de Dados é uma jornada essencial para aqueles que desejam dominar a linguagem SQL e suas aplicações práticas. Abrangendo desde os conceitos básicos até consultas avançadas, estrutura de banco de dados e segurança, este curso oferece as habilidades necessárias para gerenciar e manipular dados com confiança. Seja você um iniciante ou alguém que busca aprimorar suas competências em SQL, este curso fornece as bases sólidas para uma carreira em gestão de dados e análise, tornando-o altamente relevante no mercado de trabalho e preparado para lidar com sistemas de gerenciamento de bancos de dados como MySQL, Oracle, SQL Server e PostgreSQL.</p>
 						</div>
 					</div>
-					<div id="main">
-						<div class="inner">
-							<h1>Sobre</h1>
-							<span class="image main"><img src="images/vr.jpg" alt="" /></span>
-							<p><b>Novo Programa de Realidade Virtual e Aumentada</b></p>
-							<p>Estamos empolgados em anunciar o lançamento de nosso novo programa de Realidade Virtual e Aumentada (RV/RA). Agora, os alunos podem mergulhar em experiências educacionais imersivas que tornam o aprendizado mais envolvente e prático. Este é apenas o começo de nossa jornada na exploração dessas tecnologias inovadoras.</p>
-						</div>
+					<div>
+						<h2>Inscreva-se</h2>
+						<form method="post" action="https://64ee8a14219b3e2873c34ae9.mockapi.io/api/v1/aluno">
+							<div class="fields">
+								<div class="field half">
+									<input type="text" name="name" id="name" placeholder="Nome" />
+								</div>
+								<div class="field half">
+									<input type="email" name="email" id="email" placeholder="E-mail" />
+								</div>
+								<div class="field">
+									<p><b>CURSO DESTINADO</b></p>
+									<input type="text" name="curso" id="curso" value="SQL" readonly/>
+								</div>
+							</div>
+							<ul class="actions">
+								<li><button type="submit">Enviar</button></li>
+							</ul>
+						</form>
 					</div>
 
 				<!-- Footer -->
