--- a/ProgramacaoWEB/TarefaSiteCursos/flutter.html
+++ b/ProgramacaoWEB/TarefaSiteCursos/flutter.html
@@ -48,19 +48,30 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Notícias</h1>
-							<span class="image main"><img src="images/expansao.jpg" alt="" /></span>
-							<p><b>Expansão do Campus Tecnológico</b></p>
-							<p>Nosso campus continua a crescer e se aprimorar. Estamos investindo em infraestrutura de última geração para fornecer aos nossos alunos as melhores instalações possíveis. Com laboratórios de pesquisa avançados e salas de aula inteligentes, nosso compromisso com a tecnologia de ponta é evidente em cada canto do campus.</p>
+							<h1>Curso aplicativos mobile com Flutter</h1>
+							<span class="image main"><img src="images/flutter-log.png" alt="" /></span>
+							<p>O Curso de Flutter para Mobile é uma experiência abrangente e prática que prepara você para criar aplicativos móveis de alta qualidade e desempenho. Você mergulhará no universo do Flutter, uma poderosa estrutura de desenvolvimento de código aberto da Google, aprendendo a construir interfaces de usuário intuitivas e atraentes, bem como a implementar funcionalidades complexas. Com uma ênfase na criação de aplicativos para Android e iOS a partir de um único código-fonte, este curso proporciona uma vantagem competitiva no mundo do desenvolvimento móvel, capacitando você a desenvolver aplicativos de maneira eficiente e eficaz, enquanto atende às crescentes demandas da indústria de tecnologia móvel.</p>
 						</div>
 					</div>
-					<div id="main">
-						<div class="inner">
-							<h1>Sobre</h1>
-							<span class="image main"><img src="images/vr.jpg" alt="" /></span>
-							<p><b>Novo Programa de Realidade Virtual e Aumentada</b></p>
-							<p>Estamos empolgados em anunciar o lançamento de nosso novo programa de Realidade Virtual e Aumentada (RV/RA). Agora, os alunos podem mergulhar em experiências educacionais imersivas que tornam o aprendizado mais envolvente e prático. Este é apenas o começo de nossa jornada na exploração dessas tecnologias inovadoras.</p>
-						</div>
+					<div>
+						<h2>Inscreva-se</h2>
+						<form method="post" action="https://64ee8a14219b3e2873c34ae9.mockapi.io/api/v1/aluno">
+							<div class="fields">
+								<div class="field half">
+									<input type="text" name="name" id="name" placeholder="Nome" />
+								</div>
+								<div class="field half">
+									<input type="email" name="email" id="email" placeholder="E-mail" />
+								</div>
+								<div class="field">
+									<p><b>CURSO DESTINADO</b></p>
+									<input type="text" name="curso" id="curso" value="Flutter" readonly/>
+								</div>
+							</div>
+							<ul class="actions">
+								<li><button type="submit">Enviar</button></li>
+							</ul>
+						</form>
 					</div>
 
 				<!-- Footer -->
