--- a/ProgramacaoWEB/TarefaBootstrap/detalheBatman.html
+++ b/ProgramacaoWEB/TarefaBootstrap/detalheBatman.html
@@ -80,9 +80,8 @@
                 </div>
                 <div class="tab-pane" id="profile" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
                     <img src="img/batman.png" class="img-thumbnail" style="height: 300px;" alt="brinquedoBatman">
-                    <img src="img/batman.png" class="img-thumbnail" style="height: 300px;" alt="brinquedoBatman">
-                    <img src="img/batman.png" class="img-thumbnail" style="height: 300px;" alt="brinquedoBatman">
-                    <img src="img/batman.png" class="img-thumbnail" style="height: 300px;" alt="brinquedoBatman">
+                    <img src="img/batman1.jpg" class="img-thumbnail" style="height: 300px;" alt="brinquedoBatman">
+                    <img src="img/batman2.jpg" class="img-thumbnail" style="height: 300px;" alt="brinquedoBatman">
                 </div>
                 <div class="tab-pane" id="messages" role="tabpanel" aria-labelledby="messages-tab" tabindex="0">
                     <div class="card">
