--- a/ProgramacaoWEB/TarefaBootstrap/detalheBarbie.html
+++ b/ProgramacaoWEB/TarefaBootstrap/detalheBarbie.html
@@ -11,13 +11,13 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <h2>Super boneco do Batman</h2>
+            <h2>Boneca da Barbie</h2>
         </div>
     </div>
     <br>
     <div class="row">
         <div class="col-4">
-            <img src="img/batman.png" class="img-thumbnail" style="height: 300px;" alt="brinquedoBatman">
+            <img src="img/barbie1.jpg" class="img-thumbnail" style="height: 300px;" alt="brinquedoBatman">
         </div>
         <div class="col-8">
             <div class="row">
@@ -28,7 +28,7 @@
                         </div>
                         <div class="card-body">
                           <blockquote class="blockquote mb-0">
-                            <p>Presentei seu filho com este boneco super bacana do Batman. Com capa destacavél e invisível o boneco de 40cm faz a alegria da criançada e estimula a imaginação. Seu material é anti-alérgico e não tóxico.</p>
+                            <p>A Boneca Barbie Sereia é a combinação perfeita de beleza e aventura subaquática. Com sua cauda cintilante e longos cabelos, ela é a companhia ideal para criar histórias mágicas no fundo do mar, estimulando a imaginação das crianças e proporcionando horas de diversão criativa.</p>
                           </blockquote>
                         </div>
                       </div>
@@ -48,7 +48,7 @@
                     <button type="button" class="btn btn-danger">Adicionar ao carrinho</button>
                 </div>
                 <div class="col-4">
-                    <h3>R$ 259,90</h3>
+                    <h3>R$ 79,90</h3>
                 </div>
                 <div class="col-4">
                     <img src="img/bandeiras-de-cartao-de-credito.jpeg" style="height: 100px;" alt="bandeiraCartoes">
@@ -75,45 +75,43 @@
             <!-- Tab panes -->
             <div class="tab-content">
                 <div class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
-                    <iframe width="887" height="499" src="https://www.youtube.com/embed/MVDd91lATMI" title="Vlad e Niki fingem ser o Batman e brincam com Brinquedos do Batman" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
+                    <iframe width="1383" height="480" src="https://www.youtube.com/embed/mNWiQ--NF9Y" title="Barbie Cor Revelação Série Sereia Unboxing" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <div class="tab-pane" id="profile" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
-                    <img src="img/batman.png" class="img-thumbnail" style="height: 300px;" alt="brinquedoBatman">
-                    <img src="img/batman.png" class="img-thumbnail" style="height: 300px;" alt="brinquedoBatman">
-                    <img src="img/batman.png" class="img-thumbnail" style="height: 300px;" alt="brinquedoBatman">
-                    <img src="img/batman.png" class="img-thumbnail" style="height: 300px;" alt="brinquedoBatman">
+                    <img src="img/barbie1.jpg" class="img-thumbnail" style="height: 300px;" alt="brinquedoBarbie">
+                    <img src="img/barbie2.jpg" class="img-thumbnail" style="height: 300px;" alt="brinquedoBarbie">
+                    <img src="img/barbie3.jpg" class="img-thumbnail" style="height: 300px;" alt="brinquedoBarbie">
                 </div>
                 <div class="tab-pane" id="messages" role="tabpanel" aria-labelledby="messages-tab" tabindex="0">
                     <div class="card">
                         <div class="card-header">
-                        Jefferson Murat
+                        Wallace Galli
                         </div>
                         <div class="card-body">
                         <blockquote class="blockquote mb-0">
-                            <p>Esse brinquedo do Batman é incrível! Meu filho adora brincar com ele o dia todo. A qualidade é ótima e ele se sente como um verdadeiro super-herói!</p>
+                            <p>Adoro a versatilidade dessa boneca. Ela pode ser uma sereia mágica ou uma amiga de terra firme!</p>
                         </blockquote>
                         </div>
                     </div>
                     <br>
                     <div class="card">
                         <div class="card-header">
-                        Gustavo Bassaneto
+                        André Soares
                         </div>
                         <div class="card-body">
                         <blockquote class="blockquote mb-0">
-                            <p>Como fã de longa data do Batman, fiquei impressionado com a atenção aos detalhes deste brinquedo. É como ter uma miniatura perfeita do Cavaleiro das Trevas em casa. Comprei esse brinquedo para o meu sobrinho e ele não consegue parar de sorrir desde então. A capa é removível, o que é uma característica legal, e as articulações são perfeitas para criar poses épicas.</p>
+                            <p>A Barbie Sereia é simplesmente deslumbrante! Minha filha adora brincar de explorar o fundo do mar com ela.</p>
                         </blockquote>
                         </div>
                     </div>
                     <br>
                     <div class="card">
                         <div class="card-header">
-                        Maria Carolina
+                        Ana Silva
                         </div>
                         <div class="card-body">
                         <blockquote class="blockquote mb-0">
-                            <p>O brinquedo é durável e resistente, mesmo nas mãos das crianças mais agitadas. É o presente perfeito para qualquer pequeno fã do Batman!</p>
+                            <p>Minha sobrinha não larga mais a Barbie Sereia. Ela se diverte inventando aventuras fantásticas.</p>
                         </blockquote>
                         </div>
                     </div>
